--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint-config-get-off-my-lawn": "^5.0.1",
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.1"
   }
 }
