--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "babel-plugin-styled-components": "^1.12.0"
   }
 }
