--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.1.0",
+    "react-whirligig": "^6.6.15",
     "styled-components": "^5.2.1",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
-    "@fortawesome/react-fontawesome": "^0.1.14",
     "babel-plugin-styled-components": "^1.12.0"
   }
 }
