--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "dependencies": {
     "eslint-config-get-off-my-lawn": "^5.0.1",
     "next": "10.0.5",
+    "pure-react-carousel": "^1.27.6",
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.1",
     "react-icons": "^4.1.0",
+    "react-responsive": "^8.2.0",
     "react-whirligig": "^6.6.15",
     "styled-components": "^5.2.1",
     "url-loader": "^4.1.1"
