--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mailchimp/mailchimp_marketing": "^3.0.40",
+    "axios": "^0.21.1",
     "eslint-config-get-off-my-lawn": "^5.0.1",
     "next": "10.0.5",
     "pure-react-carousel": "^1.27.6",
