--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "@mailchimp/mailchimp_marketing": "^3.0.40",
     "axios": "^0.21.1",
     "eslint-config-get-off-my-lawn": "^5.0.1",
-    "next": "10.0.5",
+    "next": "^11.1.2",
     "pure-react-carousel": "^1.27.6",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-anchor-link-smooth-scroll": "^1.0.12",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-icons": "^4.1.0",
     "react-responsive": "^8.2.0",
     "react-whirligig": "^6.6.15",
@@ -23,6 +23,9 @@
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.12.0"
+    "@types/node": "^16.10.1",
+    "@types/react": "^17.0.24",
+    "babel-plugin-styled-components": "^1.12.0",
+    "typescript": "^4.4.3"
   }
 }
