--- a/package.json
+++ b/package.json
@@ -9,23 +9,17 @@
   },
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.40",
-    "axios": "^0.21.1",
-    "eslint-config-get-off-my-lawn": "^5.0.1",
     "next": "^11.1.2",
-    "pure-react-carousel": "^1.27.6",
     "react": "^17.0.2",
-    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.1.0",
-    "react-responsive": "^8.2.0",
-    "react-whirligig": "^6.6.15",
-    "styled-components": "^5.2.1",
-    "url-loader": "^4.1.1"
+    "react-icons": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^16.10.1",
     "@types/react": "^17.0.24",
-    "babel-plugin-styled-components": "^1.12.0",
+    "autoprefixer": "^10.3.6",
+    "postcss": "^8.3.8",
+    "tailwindcss": "^2.2.16",
     "typescript": "^4.4.3"
   }
 }
