--- a/package.json
+++ b/package.json
@@ -9,16 +9,25 @@
   },
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.40",
+    "@mui/material": "^5.0.3",
+    "@next-auth/prisma-adapter": "^0.5.2-next.15",
+    "@prisma/client": "^3.2.1",
+    "firebase": "^9.1.2",
     "next": "^11.1.2",
+    "next-auth": "^4.0.0-beta.4",
+    "next-pwa": "^5.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.1.0"
+    "react-icons": "^4.1.0",
+    "zustand": "^3.5.13",
+    "zustand-persist": "^0.3.1"
   },
   "devDependencies": {
     "@types/node": "^16.10.1",
     "@types/react": "^17.0.24",
     "autoprefixer": "^10.3.6",
     "postcss": "^8.3.8",
+    "prisma": "^3.2.1",
     "tailwindcss": "^2.2.16",
     "typescript": "^4.4.3"
   }
