--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@mui/material": "^5.0.3",
     "@next-auth/prisma-adapter": "^0.5.2-next.15",
     "@prisma/client": "^3.2.1",
+    "apollo-server-micro": "^3.4.0",
     "firebase": "^9.1.2",
+    "graphql": "^15.6.1",
+    "micro": "^9.3.4",
+    "micro-cors": "^0.1.1",
     "next": "^11.1.2",
     "next-auth": "^4.0.0-beta.4",
     "next-pwa": "^5.3.1",
+    "nodemailer": "^6.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.1.0",
@@ -26,6 +31,8 @@
     "zustand-persist": "^0.3.1"
   },
   "devDependencies": {
+    "@types/micro": "^7.3.6",
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "^16.10.1",
     "@types/react": "^17.0.24",
     "autoprefixer": "^10.3.6",
