--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.16",
+    "@emotion/css": "^11.5.0",
+    "@emotion/react": "^11.5.0",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.3.0",
     "@mailchimp/mailchimp_marketing": "^3.0.40",
     "@mui/material": "^5.0.3",
     "@next-auth/prisma-adapter": "^0.5.2-next.15",
