--- a/package.json
+++ b/package.json
@@ -12,21 +12,17 @@
   },
   "dependencies": {
     "@apollo/client": "^3.4.16",
-    "@emotion/css": "^11.5.0",
-    "@emotion/react": "^11.5.0",
-    "@emotion/server": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
     "@mailchimp/mailchimp_marketing": "^3.0.40",
-    "@mui/material": "^5.0.3",
     "@next-auth/prisma-adapter": "^0.5.2-next.15",
     "@prisma/client": "^3.2.1",
     "apollo-server-micro": "^3.4.0",
+    "classnames": "^2.3.1",
     "dayjs": "^1.10.7",
     "firebase": "^9.1.2",
     "graphql": "^15.6.1",
     "micro": "^9.3.4",
     "micro-cors": "^0.1.1",
-    "next": "^11.1.2",
+    "next": "^12.0.1",
     "next-auth": "^4.0.0-beta.4",
     "next-pwa": "^5.3.1",
     "nodemailer": "^6.7.0",
