--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
       ],
       "@/pages/*": [
         "pages/*"
-      ],
+      ]
     },
     "target": "es5",
     "lib": [
@@ -17,7 +17,7 @@
     ],
     "allowJs": true,
     "skipLibCheck": true,
-    "strict": false,
+    "strict": true,
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "esModuleInterop": true,
@@ -25,12 +25,14 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve"
+    "jsx": "preserve",
+    "incremental": true
   },
   "include": [
     "next-env.d.ts",
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "pages/_middleware.tss"
   ],
   "exclude": [
     "node_modules"
